--- a/ETRU_Attack_simulation_final.ipynb
+++ b/ETRU_Attack_simulation_final.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 1. Lattice attack for ETRU with dimension reduction on the lattice\n",
     "\n",
-    "## Environment \n",
+    "## 1.1 Environment \n",
     "\n",
     "- Needs sagemath installed\n",
     "- Needs a folder with ETRU private public keys in a pkl format in the folder Chaves/all_keys61.pkl (for n = 61 e.g.). OBS: private key is only used to check if we found the correct key. \n",
@@ -14,7 +14,7 @@
     "- File with ETRU functions called 'ETRU_Funcoes.sage'\n",
     "\n",
     "\n",
-    "## Big picture of how to use these functions\n",
+    "## 1.2 Big picture of how to use these functions\n",
     "\n",
     "1. Generate ETRU keys using the function gen_key_database on 'ETRU_Funcoes.sage' \n",
     "and save in the 'Chaves' folder\n",
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import libraries and define functions to \n",
+    "## 2.1 Import libraries and define functions to \n",
     "- Read public key and create the lattice\n",
     "- Run BKZ on this lattice and save results in a dictionary format (see 'run_attack_single_key')\n",
     "- Check if correct key or one of its convolutions is in the returned BKZ reduced matrix ('buscar_chave')"
@@ -204,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run bkz on etru keys and save as pickle format"
+    "## 2.2 Run bkz on etru keys and save as pickle format"
    ]
   },
   {
@@ -1954,7 +1954,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Read bkz runs and find the key for specific n and cut"
+    "## 2.3 Read bkz runs and find the key for specific n and cut"
    ]
   },
   {
@@ -2043,7 +2043,7 @@
     "scrolled": true
    },
    "source": [
-    "## Time measurement of attack"
+    "## 2.4 Time measurement of attack"
    ]
   },
   {
